<resources>
    <string name="app_name">PiBell</string>
    <string name="LiveViewButtonText">ON / OFF</string>
    <string name="touchless_doorbell_login_text">PiBell Login</string>
    <string name="EmailInputHint">Email</string>
    <string name="PasswordInputHint">Password</string>
    <string name="loginButtonText">LOGIN</string>
    <string name="NewUserButtonText">New User</string>
    <string name="live_view_button_text">Live View</string>
    <string name="BackButtonText">Back</string>
    <string name="log_out_button_Text">Log Out</string>
    <string name="settings">Settings</string>
    <string name="take_pic_button_text">TAKE PIC</string>
    <string name="armDeviceSwitchText">ARM/DISARM RPi DOORBELL</string>
    <string name="send_notifications_TEXT">SEND NOTIFICATIONS</string>
    <string name="medaiButtonText">MEDIA</string>
    <string name="mediapagebackbuttonText">mediaPageBackButton</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="pibell_sign_up_title_text">PiBell Admin Sign-Up</string>
    <string name="rpi_device_hostname_signup_page_hint">RPi Device Hostname</string>
    <string name="email_address_sign_up_page_hint">Email (EX: user@domain.com)</string>
    <string name="name_sign_up_page_hint">Name</string>
    <string name="password_sign_up_page_hint">Password (At least 6 characters)</string>
    <string name="clear_pics_button_text">CLEAR</string>
    <string name="media_page_title_text">Media</string>
    <string name="notifications_page_title_text">Message History</string>
    <string name="notifications_button_text">NOTIFICATIONS</string>
    <string name="picture_capture_text">PICTURE CAPTURE</string>

    <string name="manage_guests">CURRENT GUESTS</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_a_guest">Add a Guest</string>
    <string name="add_guest">ADD GUEST</string>
    <string name="todo">TODO</string>
    <string name="admin_info_button_text">ADMIN INFO</string>
    <string name="admin_info_page_title">ADMIN INFO</string>
    <string name="admin_id_label_text">Admin ID:</string>
    <string name="hostname_label">Hostname:</string>
    <string name="todo2">TODO2</string>
    <string name="choose_new_account_type_title">CHOOSE NEW ACCOUNT TYPE</string>
    <string name="new_admin_button_text">NEW ADMIN</string>
    <string name="new_guest_button_text">NEW GUEST</string>
    <string name="pibell_guest_sign_up_page_title">PiBell Guest Sign Up</string>
    <string name="admin_id_hint">Admin ID</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="change_email_button_text">Change Email</string>
    <string name="guest_home_page_notification_log_text">Notification Log</string>
    <string name="guest_home_page_settings_button_text">Settings</string>
    <string name="push_notifications_text">PUSH NOTIFICATIONS</string>
    <string name="change_password_button_text">Change Password</string>
    <string name="delete_account_button_text">Delete Account</string>
    <string name="help_page_title_Text">HELP PAGE</string>
    <string name="connection_status_label_text">Connection Status:</string>
    <string name="help_page_retry_button_text">Retry</string>
    <string name="help_page_general_help_text">
        Welcome!<br/>
        If you are having connection problems please try the following:<br/>
        - Check if the PiBell is turned on and running in good condition (no over-heating, damage, etc.)<br/><br/>
        - Check if both this device and the PiBell are connected to the same wifi network<br/><br/>
        - Close the app and restart the PiBell<br/><br/>
        If you have any more questions, comments or concerns regarding anything PiBell related, please feel free to reach out to:<br/>
        ThePiBellTeam@gmail.com
    </string>
    <string name="generalhelpText_p1">Welcome!<br/></string>
    <string name="generalhelpText_p2">If you are having connection problems please try the following:<br/></string>
    <string name="generalhelpText_p3">- Check if the PiBell is turned on and running in good condition (no over-heating, damage, etc.)<br/><br/></string>
    <string name="generalhelpText_p4">- Check if both this device and the PiBell are connected to the same wifi network<br/><br/></string>
    <string name="generalhelpText_p5">- Close the app and restart the PiBell and check the connections again<br/><br/></string>
    <string name="generalhelpText_p6">If you have any more questions, comments or concerns regarding anything PiBell related, please feel free to reach out to:<br/></string>
    <string name="generalhelpText_p7">ThePiBellTeam@gmail.com</string>
    <string name="todo3">TODO</string>
    <string name="todo7">TODO</string>
    <string name="help_page_button_Text">Help</string>
    <string name="fullLine" />
    <string name="Settings">Settings</string>
    <string name="Camera">Camera</string>
    <string name="home">Home</string>
    <string name="media">Media</string>
    <string name="settings_bold_text">Settings</string>
    <string name="todo23456789">TODO</string>
    <string name="todo322222222222222222222222">TODO</string>
    <string name="message_history_text">message history</string>
    <string name="arm_disarm_pibell_text">Arm/Disarm PiBell</string>
    <string name="todowwww">TODOwwww</string>
    <string name="help_page_text_title">Help Page</string>
    <string name="connection_status_text_label">Connection Status</string>
    <string name="refresh_button_text">Refresh</string>
    <string name="change_password_button_test_guest">Change password</string>
</resources>