<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addGuestLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_guest"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <EditText
        android:id="@+id/guestEmailInput"
        android:layout_width="318dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/email_address_sign_up_page_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestNameInput" />

    <EditText
        android:id="@+id/guestNameInput"
        android:layout_width="318dp"
        android:layout_height="46dp"
        android:layout_marginBottom="404dp"
        android:ems="10"
        android:hint="@string/name_sign_up_page_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addGuestLabel"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/guestPasswordInput"
        android:layout_width="318dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/password_sign_up_page_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestEmailInput"
        app:layout_constraintVertical_bias="0.117" />

    <Button
        android:id="@+id/addGuestBtn"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:text="@string/add_guest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestPasswordInput"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/goBack"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:text="@string/BackButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addGuestBtn"
        app:layout_constraintVertical_bias="0.184" />
</androidx.constraintlayout.widget.ConstraintLayout>