<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="376dp"
        android:layout_height="62dp"
        android:text="@string/pibell_guest_sign_up_page_title"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/guestSignUpNameInput"
        android:layout_width="337dp"
        android:layout_height="61dp"
        android:textColor="@color/white"
        android:textColorHint="#939393"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_sign_up_page_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <EditText
        android:id="@+id/guestEmailSignUpPage"
        android:layout_width="337dp"
        android:layout_height="61dp"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="@string/email_address_sign_up_page_hint"
        android:textColorHint="#939393"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <EditText
        android:id="@+id/guestPasswordSignUpPageInput"
        android:layout_width="337dp"
        android:layout_height="61dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_sign_up_page_hint"
        android:textColorHint="#939393"
        android:textColor="@color/white"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <EditText
        android:id="@+id/guestSignUpPiBellName"
        android:layout_width="337dp"
        android:layout_height="61dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/rpi_device_hostname_signup_page_hint"
        android:importantForAutofill="no"
        android:textColorHint="#939393"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688" />

    <EditText
        android:id="@+id/guestSignUpAdminIDInput"
        android:layout_width="337dp"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="@string/admin_id_hint"
        android:textColorHint="#939393"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833"
        android:autofillHints="" />

    <Button
        android:id="@+id/guestSignUpButton"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:text="@string/sign_up_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />
</androidx.constraintlayout.widget.ConstraintLayout>