<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginPageTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:text="@string/sign_up_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903"
        app:rippleColor="#C63030"
        app:strokeColor="#9C4B4B" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/LoginPageText"
        android:layout_width="389dp"
        android:layout_height="61dp"
        android:text="@string/pibell_sign_up_title_text"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <EditText
        android:id="@+id/ipInput"
        android:layout_width="314dp"
        android:textColorHint="#939393"
        android:layout_height="48dp"
        android:textColor="@color/white"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/rpi_device_hostname_signup_page_hint"
        android:inputType="textVisiblePassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="318dp"
        android:textColorHint="#939393"
        android:textColor="@color/white"
        android:layout_height="46dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_address_sign_up_page_hint"
        android:inputType="textPersonName|textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <EditText
        android:id="@+id/pwInput"
        android:textColor="@color/white"
        android:textColorHint="#939393"
        android:layout_width="318dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_sign_up_page_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="317dp"
        android:textColorHint="#939393"
        android:layout_height="43dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_sign_up_page_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

</androidx.constraintlayout.widget.ConstraintLayout>